Fxing nsbeta3+ bug 45680. Cloning an HTML element with a style attribute didn't clone the style declaration in the element so changing the style on the clone resulted in a style change for both elements. Also fixing a few memory leaks in nsHTMLTableElement. r=pollmann@netscape.com