content/html/content/src/nsHTMLParagraphElement.cpp
@@ -126,6 +126,7 @@ nsHTMLParagraphElement::CloneNode(PRBool aDeep, nsIDOMNode** aReturn)
   if (nsnull == it) {
     return NS_ERROR_OUT_OF_MEMORY;
   }
+  nsCOMPtr<nsIDOMNode> kungFuDeathGrip(it);
   it->mInner.Init(it, mInner.mNodeInfo);
   mInner.CopyInnerTo(this, &it->mInner, aDeep);
   return it->QueryInterface(kIDOMNodeIID, (void**) aReturn);
