layout/html/content/src/nsHTMLSelectElement.cpp
@@ -432,11 +432,9 @@ nsHTMLSelectElement::CloneNode(PRBool aDeep, nsIDOMNode** aReturn)
   if (nsnull == it) {
     return NS_ERROR_OUT_OF_MEMORY;
   }
-  // Stabilize the refcount before copying the inner element.
-  NS_ADDREF(it);
+  nsCOMPtr<nsIDOMNode> kungFuDeathGrip(it);
   mInner.CopyInnerTo(this, &it->mInner, aDeep);
   nsresult rv = it->QueryInterface(kIDOMNodeIID, (void**) aReturn);
-  NS_RELEASE(it);
   return rv;
 }
 
